# Computer_Programming_Repo

Files/: CMakeLists.txt  word_counts.txt
Files/src/: CMakeLists.txt  a.out  fial  fial.c  plot.c
Pointers/: CMakeLists.txt  Castin2.txt  Memory_Layout1.txt  Memory_Layout2.txt
Pointers/bui/: CMakeCache.txt  Makefile  cmake_install.cmake
Pointers/bui/src/: Makefile  cmake_install.cmake
Pointers/include/: name_length.h
Pointers/src/: CMakeLists.txt  Casting1.c  Memory_Layout3.c  Pointer_Basics.c  Privilege.c
Preprocessor/: .gitignore  CMakeLists.txt  README.md  environment.yml
Preprocessor/include/: welcome.h
Preprocessor/src/: main.c  welcome.c
Preprocessor/super_assert/: demo  sa  super_assert.c  super_assert.h
Preprocessor/tests/: welcome_tests.c
Structures/: CMakeLists.txt
Structures/.cache/clangd/index/: main.c.2B5FDC59B402FDA8.idx  rectangle.c.75B46EF125F124FE.idx  rectangle.h.0D5406123BA6A23E.idx  struct_test.c.06CE8DA908FAF2C4.idx
Structures/include/: rectangle.h
Structures/src/: CMakeLists.txt  main.c  rectangle.c
Structures/tests/: CMakeLists.txt  struct_test.c
Testing/: CMakeLists.txt
Testing/src/: main.c  name_length.c
Testing/tests/: CMakeLists.txt  test_length.c
